--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -314,6 +314,8 @@ Estructura general de slide
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; /* mantiene el PNG completo */
+    width: 100%;
+    height: 100%;
 }
 
 
