--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -313,7 +313,7 @@ Estructura general de slide
     background-image: url("../templates/fondo01usach-fing.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; /* mantiene el PNG completo */
+    background-size: contain; /* mantiene el PNG completo */
     width: 100%;
     height: 100%;
 }
