--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -309,13 +309,18 @@
 Estructura general de slide
 ========================================================== */
 .reveal .slide-background-content {
-    background-color: #ffffff; /* fondo blanco */
+    background-color: #ffffff;
+}
+
+.reveal .slide-background-content::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+
     background-image: url("../templates/fondo01usach-fing.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain; /* mantiene el PNG completo */
-    width: 100%;
-    height: 100%;
+    background-size: 100% auto;
 }
 
 
