--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -309,19 +309,27 @@
 Estructura general de slide
 ========================================================== */
 .reveal .slide-background-content {
+    width: 100%;
+    height: 100%;
+
     background-color: #ffffff;
-}
-
-.reveal .slide-background-content::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-
     background-image: url("../templates/fondo01usach-fing.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100% auto;
 }
+
+@media (min-aspect-ratio: 16/9) {
+  .reveal .slide-background-content {
+    background-size: cover;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .reveal .slide-background-content {
+    background-size: contain;
+  }
+}
+
 
 
 
