--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -314,22 +314,26 @@ Estructura general de slide
     background-color: #ffffff;
     background-image: url("../templates/fondo01usach-fing.png");
     background-repeat: no-repeat;
-    background-position: center center;
-    background-size: contain;
+    background-position: center top; /* asegura que el logo quede visible */
+    background-size: auto 100%;      /* ajusta la altura completa */
 }
 
 
-@media (min-aspect-ratio: 16/9) {
+
+@media (orientation: portrait) {
     .reveal .slide-background-content {
-        background-size: cover;
+        background-size: auto 100%;
+        background-position: center top;
     }
 }
 
-@media (max-aspect-ratio: 16/9) {
+@media (orientation: landscape) {
     .reveal .slide-background-content {
         background-size: contain;
+        background-position: center center;
     }
 }
+
 
 
 .slide-section {
