--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -319,6 +319,13 @@ Estructura general de slide
     background-size: contain;
 }
 
+/*especifico para quizz*/
+section.reveal-quiz-question.present {
+    background-image: url("../templates/fondo01usach-fing-sinlogo.png") !important;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+
 
 .slide-section {
     height: 100dvh;
