--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -320,11 +320,9 @@ Estructura general de slide
 }
 
 /* Fondo SOLO para quizzes */
-.reveal .slide-background.present[data-quiz] .slide-background-content {
+.reveal .slide-background.quizz.present .slide-background-content {
   background-image: url("../templates/fondo01usach-fing-sinlogo.png");
 }
-
-
 
 .slide-section {
     height: 100dvh;
