--- a/assets/mode-dark/usach-render.css
+++ b/assets/mode-dark/usach-render.css
@@ -43,6 +43,20 @@
     overflow: hidden; /* Mantiene el tamaño total fijo */
 }
 
+.render-usach-dark Diapositiva[disposicion="interactivo-alternativas"] {
+    display: grid;
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    padding: 2em 3em;
+    position: relative;
+    background: var(--usach-azul-gris) url('../templates/fondo01usach-fing-sinlogo.png') no-repeat center center;
+    background-size: cover;
+    border-radius: 1rem;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    overflow: hidden; /* Mantiene el tamaño total fijo */
+}
+
 /* Título */
 .render-usach-dark Diapositiva[titulo]::before {
     content: attr(titulo);
@@ -282,7 +296,6 @@
 /* === Banco de preguntas === */
 .render-usach-dark banco {
     border: 2px dashed var(--usach-naranja);
-    background-color: rgba(250, 250, 250, 0.9);
     padding: 1rem;
     text-align: center;
     color: var(--usach-gris-claro);
