--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -43,6 +43,10 @@
     overflow: hidden; /* Mantiene el tamaño total fijo */
 }
 
+.render-usach-dark Diapositiva[disposicion="interactivo-alternativas"] {
+    background: var(--usach-blanco) url('../templates/fondo01usach-fing-sinlogo.png') no-repeat center center;
+}
+
 /* Título */
 .render-usach Diapositiva[titulo]::before {
     content: attr(titulo);
