--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -43,7 +43,7 @@
     overflow: hidden; /* Mantiene el tamaño total fijo */
 }
 
-.render-usach-dark Diapositiva[disposicion="interactivo-alternativas"] {
+.render-usach Diapositiva[disposicion="interactivo-alternativas"] {
     background: var(--usach-blanco) url('../templates/fondo01usach-fing-sinlogo.png') no-repeat center center;
 }
 
