--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -43,6 +43,7 @@
     overflow: hidden; /* Mantiene el tamaño total fijo */
 }
 
+/* diapositiva para quizz */
 .render-usach Diapositiva[disposicion="interactivo-alternativas"] {
     background: var(--usach-blanco) url('../templates/fondo01usach-fing-sinlogo.png') no-repeat center center;
 }
