--- a/assets/mode-dark/usach-render.css
+++ b/assets/mode-dark/usach-render.css
@@ -292,7 +292,7 @@
     border: 2px dashed var(--usach-naranja);
     padding: 1rem;
     text-align: center;
-    color: var(--usach-azul-gris);
+    background-color: var(--usach-azul-gris);
     font-style: italic;
     border-radius: 0.75rem;
 }
