--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -218,10 +218,15 @@
 .render-usach tabla {
     display: table;
     border-collapse: collapse;
-    margin: 1em auto;
+    margin: 0.5em auto;
     font-size: 0.9em;
     color: var(--usach-azul-gris);
 }
+
+.render-usach tabla {
+    position: relative;
+}
+
 .render-usach fila { display: table-row; }
 .render-usach celda {
     display: table-cell;
@@ -237,6 +242,8 @@
     text-align: center;
     font-weight: bold;
     color: var(--usach-verde);
+    margin-bottom: 0.5em;
+    width: 100%;
 }
 
 /* === Descripción de la tabla === */
@@ -246,7 +253,9 @@
     margin-top: 0.5em;
     text-align: center;
     color: var(--usach-negro);
+    width: 100%;
 }
+
 
 
 /* === Imágenes === */
