--- a/assets/mode-light/usach-render.css
+++ b/assets/mode-light/usach-render.css
@@ -272,6 +272,7 @@
 
 /* === Imágenes === */
 .render-usach .img-wrapper {
+    display: inline-block;     
     text-align: center;
     margin: 1em auto;
 }
@@ -283,10 +284,17 @@
 }
 
 .render-usach .img-descripcion {
+    display: block;
     margin-top: 0.4em;
     font-size: 0.85em;
     color: var(--usach-negro);
+
+    /* Esto asegura que el texto se ajuste al ancho de la imagen */
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 
 
